<resources>
    <string name="app_name">FisioTracker</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="or_login_with">or login with</string>
    <string name="permanecer_conectado">Permanecer conectado</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="imagem_de_topo">Imagem de topo</string>
    <string name="login">Login</string>
    <string name="signup">Signup!</string>
    <string name="fisioterapeuta_auxiliando_paciente">Fisioterapeuta auxiliando paciente</string>
    <string name="default_web_client_id">744179331678-jc3atm79br7jaibkj0on55vlqai8ketk.apps.googleusercontent.com</string>
    <string name="cone_de_gr_fico">Ícone de Gráfico</string>
    <string name="sem_hist_rico_do_paciente">Sem Histórico do Paciente:</string>
    <string name="fila_de_pacientes">Fila de pacientes</string>
    <string name="sem_hist_rico_do_pacientes">Sem Histórico do Paciente:</string>
    <string name="cone_de_gr_ficos">Ícone de Gráfico</string>
    <string name="selecione_um_daco">Selecione um DACO™:</string>
    <string name="menu">Menu</string>
    <string name="start">Start</string>
    <string name="pacientes_simultaneos">Pacientes simultaneos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="concordo_com_os_termos_e_condi_es">Concordo com os Termos e condições</string>
    <string name="concordo_com_a_politica_de_privacidade">Concordo com a Politica de Privacidade</string>
    <string name="pacient_1">pacient_1</string>
    <string name="pacient_2">pacient_2</string>
    <string name="linha_que_conecta">linha que conecta</string>
    <string name="confirmar">Confirmar</string>
    <string name="NameVerification">Campo de Nome não pode ser vazio</string>

    <string name="esta_a_o_ir_deletar_todos_os_dados_permanentemente_n_o_ser_poss_vel_recuperar_as_informa_es_ap_s_a_exclus_o_deseja_continuar">Esta ação irá deletar todos os dados da sessão permanentemente. Não será possível recuperar as informações após a exclusão. Deseja continuar?</string>
</resources>