<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:background="#101010"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet_signup"
            android:fontFamily="@font/m_plus_rounded1c_regular"
            android:textColor="@color/cardview_dark_background"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="619dp"
        android:contentDescription="@string/imagem_de_topo"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_auth_screen" />


    <LinearLayout

        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="642dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="38dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layoutDescription="@xml/auth_screen_scene">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/glass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rounded_corner_rectangle"
            android:gravity="center"
            android:clipToOutline="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="304dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="85sp"
                    android:src="@drawable/img_company"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="26dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/shape_text_field"
                        android:hint="@string/email"
                        android:fontFamily="@font/m_plus_rounded1c_regular"
                        android:paddingStart="16dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill,RtlSymmetry,TextFields"/>
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_email"
                        android:layout_gravity="center|end"
                        android:layout_margin="16dp"
                        tools:ignore="ContentDescription"/>
                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:autofillHints=""
                        android:background="@drawable/shape_text_field"
                        android:hint="@string/senha"
                        android:fontFamily="@font/m_plus_rounded1c_regular"
                        android:inputType="textPassword"
                        android:paddingStart="16dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry"/>
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_teste"
                        android:layout_gravity="center|end"
                        android:layout_margin="16dp"
                        tools:ignore="ContentDescription"/>
                </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="8dp">
                <CheckBox
                    android:id="@+id/checkBoxExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:text="@string/permanecer_conectado"
                    android:fontFamily="@font/m_plus_rounded1c_regular"
                    android:textColor="#808080"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esqueceu_a_senha"
                    android:fontFamily="@font/m_plus_rounded1c_regular"
                    android:textColor="#808080"
                    android:layout_gravity="center"
                    android:paddingEnd="15dp"/>
            </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="42dp"
                    app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:elevation="2dp"
                    android:background="@drawable/rounded_frame">



                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_login_backg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:lottie_rawRes="@raw/teste4"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:scaleType="centerCrop" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_login_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:lottie_rawRes="@raw/teste8"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        />

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:stateListAnimator="@animator/scale_animation"
                        android:background="@android:color/transparent"/>

                    <TextView
                        android:id="@+id/login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/m_plus_rounded1c_regular"
                        android:textColor="@color/white"
                        android:text="@string/login"
                        android:textSize="30sp"
                        android:clickable="false"
                        android:focusable="false"
                        android:stateListAnimator="@animator/scale_animation"
                        android:elevation="2dp"/>
                </FrameLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_margin= "8dp">
                    <View
                        android:layout_width="102dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_auth_screen_separate_line">
                    </View>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"
                        android:gravity="center_horizontal"
                        android:text="@string/or_login_with"
                        android:fontFamily="@font/m_plus_rounded1c_regular"
                        android:textColor="#707070">
                    </TextView>
                    <View
                        android:layout_width="102dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_auth_screen_separate_line">
                    </View>
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/ic_google_auth"
                        android:layout_margin="4dp"
                        />
                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/ic_github"
                        />
                </LinearLayout>

            </LinearLayout>
        </eightbitlab.com.blurview.BlurView>
    </LinearLayout>
</FrameLayout>
