<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/glass"
        android:layout_width="match_parent"
        android:layout_height="642dp"
        android:background="@drawable/shape_auth_container"
        android:clipToOutline="true"
        android:layout_gravity="bottom"
        android:padding="12dp"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="283dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:src="@drawable/image_logo_company"
                android:textColor="@color/white"
                android:textSize="85sp" />

            <EditText
                android:id="@+id/email_textfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_text_field"
                android:fontFamily="@font/m_plus_rounded1c_regular"
                android:hint="@string/email"
                android:drawableEnd="@drawable/ic_email"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="Autofill,TextFields" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/password_textfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/ic_password"
                android:background="@drawable/shape_text_field"
                android:fontFamily="@font/m_plus_rounded1c_regular"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="Autofill,RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp">

                <Switch
                    android:id="@+id/checkBoxExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/m_plus_rounded1c_regular"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Permanecer conectado"
                    android:textColor="@color/white"
                    android:fontFamily="@font/m_plus_rounded_1c_thin">
                </TextView>

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/m_plus_rounded_1c_thin"
                    android:text="@string/esqueceu_a_senha"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="42dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_rounded_frame"
                    android:elevation="2dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_login_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/lottie_01_button_animated_gradient" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_loading_circle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:lottie_rawRes="@raw/lottie_02_loading_circle"
                        android:visibility="invisible"
                        app:lottie_loop="true"
                        app:lottie_autoPlay="true"/>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/m_plus_rounded1c_regular"
                        android:stateListAnimator="@animator/scale_animation"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        android:textSize="32sp" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp">

                <View
                    android:layout_width="102dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_auth_screen_separate_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/m_plus_rounded_1c_thin"
                    android:gravity="center_horizontal"
                    android:text="@string/or_login_with"
                    android:textColor="#707070" />

                <View
                    android:layout_width="102dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_auth_screen_separate_line" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="08dp">

            </Space>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/google"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:background="@drawable/ic_google_auth"
                    />

                <Space
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_github_auth"
                    />
            </LinearLayout>

        </LinearLayout>
    </eightbitlab.com.blurview.BlurView>
</FrameLayout>